# musicbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Change Log.md  ChangeLog.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  TODO.list  create_venv.sh  flavor.json  mbox  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.cursor/rules/: pre-commit-validation.mdc
.github/workflows/: ci.yml  python-package.yml
NEMbox/: .menu.py.swp  .player.py.swp  .ui.py.swp  __init__.py  __main__.py  __version__.py  api.py  buffer.py  cache.py  cli.py  cmd_parser.py  config.py  const.py  cookiejar.py  daemon.py  encrypt.py  fifo.py  kill_thread.py  logger.py  ly.json  menu.py  osdlyrics.py  player.py  pyxhook.py  scrollstring.py  singleton.py  storage.py  terminalsize.py  ui.py  utils.py
NEMbox/language/en_US/LC_MESSAGES/: translate.po
NEMbox/tests/: test_api.py
NEMboxBuffer/: buffer.py
scripts/: close-stale-issues.sh
skills/musicbox/: SKILL.md
src/: __init__.py  api.py  const.py  logger.py  menu.py  player.py  ui.py
tests/: test_api.py  test_api_endpoint_updates.py  test_audio_quality.py  test_cli.py  test_daemon.py  test_main.py  test_menu_search.py  test_osdlyrics.py  test_player.py  test_terminal_input.py  test_ui_login_qr.py  test_ui_playinfo.py
tools/: login_cli.py
