[tool.poetry]
name = "NetEase-MusicBox"
packages = [
  {include = "NEMbox"},
]
version = "0.5.1"
# docs
authors = [
  "omi <4399.omi@gmail.com>",
  "Weiliang Li <to.be.impressive@gmail.com>",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: Chinese (Simplified)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Multimedia :: Sound/Audio",
]
description = "A sexy command line interface musicbox"
keywords = ["music", "netease", "cli", "player"]
license = "MIT"
maintainers = [
  "omi <4399.omi@gmail.com>",
  "Weiliang Li <to.be.impressive@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/darknessomi/musicbox"

[tool.poetry.dependencies]
python = "^3.10"
pycryptodomex = "^3.20"
rapidfuzz = "^3.0"
requests = "^2.32"
requests-cache = "^1.2"
urllib3 = "^2.0"
qrcode = "^8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.9"

[tool.poetry.scripts]
musicbox = "NEMbox.__main__:start"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv", "**/__pycache__"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E402", "E203"]

[tool.ruff.lint.isort]
known-first-party = ["NEMbox"]
