[project]
name = "NetEase-MusicBox"
version = "0.5.1"
description = "A sexy command line interface musicbox"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "omi", email = "4399.omi@gmail.com" },
  { name = "Weiliang Li", email = "to.be.impressive@gmail.com" },
]
maintainers = [
  { name = "omi", email = "4399.omi@gmail.com" },
  { name = "Weiliang Li", email = "to.be.impressive@gmail.com" },
]
keywords = ["music", "netease", "cli", "player"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: Chinese (Simplified)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.10"
dependencies = [
  "pycryptodomex>=3.20",
  "rapidfuzz>=3.0",
  "requests>=2.32",
  "requests-cache>=1.2",
  "urllib3>=2.0",
  "qrcode>=8.2",
]

[project.urls]
Repository = "https://github.com/darknessomi/musicbox"

[project.scripts]
musicbox = "NEMbox.__main__:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["NEMbox"]

[tool.hatch.build.targets.sdist]
exclude = [".poetry-cache", ".venv", ".git"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
  "ty",
  "pre-commit>=4.6",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E402", "E203"]

[tool.ruff.lint.isort]
known-first-party = ["NEMbox"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["NEMbox", "tests", "tools"]
exclude = [".venv", "build", "dist"]

[tool.ty.rules]
# Baseline relaxations for legacy code; tighten in follow-up PRs.
possibly-missing-attribute = "warn"
invalid-argument-type = "warn"
invalid-return-type = "warn"
unsupported-operator = "warn"
unresolved-attribute = "warn"
unresolved-import = "warn"
not-subscriptable = "warn"
invalid-assignment = "warn"
invalid-type-form = "warn"

[[tool.ty.overrides]]
include = ["tests/**", "tools/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
invalid-assignment = "ignore"
