[project]
name = "NetEase-MusicBox"
version = "0.5.1"
description = "A sexy command line interface musicbox"
readme = "README.md"
license = "MIT"
authors = [
  { name = "omi", email = "4399.omi@gmail.com" },
  { name = "Weiliang Li", email = "to.be.impressive@gmail.com" },
]
maintainers = [
  { name = "omi", email = "4399.omi@gmail.com" },
  { name = "Weiliang Li", email = "to.be.impressive@gmail.com" },
]
keywords = ["music", "netease", "cli", "player"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Simplified)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.10,<3.14"
dependencies = [
  "pycryptodomex>=3.21",
  "rapidfuzz>=3.9",
  "requests>=2.32",
  "requests-cache>=1.3",
  "urllib3>=2.2",
  "qrcode>=8.0",
]

[project.urls]
Homepage = "https://github.com/darknessomi/musicbox"
Repository = "https://github.com/darknessomi/musicbox"
Issues = "https://github.com/darknessomi/musicbox/issues"

[project.scripts]
musicbox = "NEMbox.__main__:start"

[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["NEMbox"]

[tool.hatch.build.targets.sdist]
exclude = [".poetry-cache", ".venv", ".git"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.15",
  "ty>=0.0.40",
  "pre-commit>=4.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
  "ignore:The 'warn' method is deprecated:DeprecationWarning:NEMbox.osdlyrics",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E402", "E203"]

[tool.ruff.lint.isort]
known-first-party = ["NEMbox"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["NEMbox", "tests", "tools"]
exclude = [".venv", "build", "dist"]

[tool.ty.rules]
# Baseline relaxations for legacy code; tighten in follow-up PRs.
possibly-missing-attribute = "warn"
invalid-argument-type = "warn"
invalid-return-type = "warn"
unsupported-operator = "warn"
unresolved-attribute = "warn"
unresolved-import = "warn"
not-subscriptable = "warn"
invalid-assignment = "warn"
invalid-type-form = "warn"

[[tool.ty.overrides]]
include = ["tests/**", "tools/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
invalid-assignment = "ignore"
